numpy ended today

--- a/Module 1 - Fundamentals of Programming/05 Python - Numpy/5.1 Numpy_1.ipynb
+++ b/Module 1 - Fundamentals of Programming/05 Python - Numpy/5.1 Numpy_1.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1721,29 +1721,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 2, 10,  5, 11,  0,  7, 12,  7, 14, 17, 16, 19,  9,  7, 17])"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 8 7 8 0 7 2 6 5]\n"
+     ]
     }
    ],
    "source": [
-    "arr = np.random.randint(0, 20, 15)\n",
+    "arr = np.random.randint(0, 10, 10)\n",
     "# generate 15 random int values between 0 to 20\n",
-    "arr"
+    "print(arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1752,16 +1749,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 2, 10,  0, 12, 14, 16])"
+       "array([8, 8, 0, 2, 6])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1774,16 +1771,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 2, 10,  5, 11,  0,  7, 12,  7, 14, 17, 16, 19,  9,  7, 17])"
+       "array([1, 1, 8, 7, 8, 0, 7, 2, 6, 5])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1810,22 +1807,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1, -1,  5, 11, -1,  7, -1,  7, -1, 17, -1, 19,  9,  7, 17])"
+       "array([  1,   1, 222,   7, 222, 222,   7, 222, 222,   5])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr[mask] = -1\n",
+    "arr[mask] = 222\n",
     "arr\n",
     "\n",
     "# This code will assign value -1 where mask is True.\n",
