--- a/Module 1 - Fundamentals of Programming/05 Python - Numpy/5.2 Numpy 2.ipynb
+++ b/Module 1 - Fundamentals of Programming/05 Python - Numpy/5.2 Numpy 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,7 +1017,7 @@
    ],
    "source": [
     "x = np.array([1,2,3,1])\n",
-    "print(x.mean())           # Mean,  it's a function of python itself\n",
+    "print(x.mean())           # Mean,  it's a function of array itself\n",
     "print(np.median(x))       # Median,  it's a function of Numpy."
    ]
   },
