--- a/Module 1 - Fundamentals of Programming/04 Python - Functions/Untitled.ipynb
+++ b/Module 1 - Fundamentals of Programming/04 Python - Functions/Untitled.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = {1,3}"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter nameexample.txt\n"
+     ]
+    }
+   ],
    "source": [
-    "s.add(15)"
+    "name = input('enter name')\n",
+    "f = open (name)"
    ]
   },
   {
@@ -26,7 +26,7 @@
     {
      "data": {
       "text/plain": [
-       "{1, 3, 15}"
+       "<_io.TextIOWrapper name='example.txt' mode='r' encoding='cp1252'>"
       ]
      },
      "execution_count": 3,
@@ -35,45 +35,27 @@
     }
    ],
    "source": [
-    "s"
+    "f"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s.add('kil')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{(15, 88, 99), 1, 15, 3, 'kil'}"
+       "'This is first line\\nthis is 2nd line'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s.update('kil')"
+    "f.read()"
    ]
   },
   {
