--- a/Module 1 - Fundamentals of Programming/04 Python - Functions/4.8 File_IO - from Course.ipynb
+++ b/Module 1 - Fundamentals of Programming/04 Python - Functions/4.8 File_IO - from Course.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -313,21 +313,17 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'This is a First File\\nContains two lines\\n'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is test.txt file\n"
+     ]
     }
    ],
    "source": [
     "f = open(\"test.txt\", \"r\")\n",
-    "f.read()"
+    "print(f.read())\n",
+    "f.close()"
    ]
   },
   {
