--- a/Module 1 - Fundamentals of Programming/06 Python - Matplotlib/6.1 Matplotlib Intro.ipynb
+++ b/Module 1 - Fundamentals of Programming/06 Python - Matplotlib/6.1 Matplotlib Intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cutomize individual line explicitly in same plot."
+    "# Customize individual line explicitly in same plot."
    ]
   },
   {
