--- a/Module 1 - Fundamentals of Programming/07 Python - Pandas/7.3 04 loc vs iloc.ipynb
+++ b/Module 1 - Fundamentals of Programming/07 Python - Pandas/7.3 04 loc vs iloc.ipynb
@@ -467,6 +467,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gitignore testing\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('gitignore testing')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
