Big DAY Module 1 completed

--- a/Module 1 - Fundamentals of Programming/09 Python - SQL/9.11 DISTINCT.ipynb
+++ b/Module 1 - Fundamentals of Programming/09 Python - SQL/9.11 DISTINCT.ipynb
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# It is used to fetch unique values from a single or multiple columns.\n",
+    "# It is used to fetch unique values from a single column or multiple columns.\n",
     "# When we are applying it to multiple columns then result of combined values of all columns should be unique."
    ]
   },
