--- a/Module 1 - Fundamentals of Programming/09 Python - SQL/9.20 Nested Queries.ipynb
+++ b/Module 1 - Fundamentals of Programming/09 Python - SQL/9.20 Nested Queries.ipynb
@@ -98,6 +98,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# List all actors in the movie Schindler's List"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -504,6 +511,13 @@
     "                (SELECT id FROM movies WHERE name=\"Schindler's List\")\n",
     "            );\n",
     "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Select Movies with Maximum rankscore."
    ]
   },
   {
