EDA Videos ended

--- a/Module 2 - EDA and Data Visualization/01 - Plotting for EDA/0 - 1.5 Histograms and Intro to PDF.ipynb
+++ b/Module 2 - EDA and Data Visualization/01 - Plotting for EDA/0 - 1.5 Histograms and Intro to PDF.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +785,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -889,6 +891,16 @@
     "# We have taken 4.7 because it is intersection of PDF lines. Yes there are errors in our model.\n",
     "# But we have only one parameter. Also for a value 4.5 it's a greator probability that it's a versicolor than virginica.\n",
     "# for a pl = 4.8 porbaility of being virginica is high than versicolor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### What is a histogram\n",
+    "https://statistics.laerd.com/statistical-guides/understanding-histograms.php\n",
+    "\n",
+    "https://www.mathsisfun.com/data/histograms.html"
    ]
   },
   {
