--- a/Module 2 - EDA and Data Visualization/03 - Probability and Statistics/3.6 Standard Normal Variate and Standardization.ipynb
+++ b/Module 2 - EDA and Data Visualization/03 - Probability and Statistics/3.6 Standard Normal Variate and Standardization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "       34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -423,16 +423,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15c91e1ffc8>]"
+       "[<matplotlib.lines.Line2D at 0x2a6e76c6bc8>]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -542,16 +542,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15c91e884c8>]"
+       "[<matplotlib.lines.Line2D at 0x2a6e770b1c8>]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -574,16 +574,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15c91aa67c8>]"
+       "[<matplotlib.lines.Line2D at 0x2a6e77b4c48>]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -646,16 +646,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15c9195ecc8>]"
+       "[<matplotlib.lines.Line2D at 0x2a6e77fa188>]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -717,16 +717,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15c918fd988>]"
+       "[<matplotlib.lines.Line2D at 0x2a6e785ff48>]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -749,16 +749,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15c91b3d448>]"
+       "[<matplotlib.lines.Line2D at 0x2a6e784d308>]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -779,6 +779,13 @@
     "plt.plot(x_dash, q1, 'r')\n",
     "plt.plot(x2_dash, q2, 'g')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
