--- a/00 Assignments/1st Assignment/Q1 - Matrix Multiplication.ipynb
+++ b/00 Assignments/1st Assignment/Q1 - Matrix Multiplication.ipynb
@@ -2,30 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-171-8f5a59062822>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m         [1,1,1,1,1]]\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'len A'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mA\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# Number of columns in A\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'len B'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mB\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m     \u001b[1;31m# Number of rows in B\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of columns in A: 3\n",
+      "Number of rows in B: 3\n",
+      "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+      "[[1, 2, 3, 4, 5], [5, 6, 7, 8, 9], [1, 1, 1, 1, 1]]\n"
      ]
     }
    ],
    "source": [
-    "A   =  []\n",
+    "A   =  [[1,2,3],\n",
+    "        [4,5,6],\n",
+    "        [7,8,9]]\n",
     "\n",
     "B   =  [[1,2,3,4,5],\n",
     "        [5,6,7,8,9],\n",
     "        [1,1,1,1,1]]\n",
     "\n",
-    "print('len A', len(A[0]))  # Number of columns in A\n",
-    "print('len B', len(B))     # Number of rows in B\n",
+    "print('Number of columns in A:', len(A[0]))  # Number of columns in A\n",
+    "print('Number of rows in B:', len(B))     # Number of rows in B\n",
     "\n",
     "print(A)\n",
     "print(B)"
@@ -33,31 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 172,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matrix cannot be empty\n"
-     ]
-    }
-   ],
-   "source": [
-    "r = mm(A, B)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,9 +51,9 @@
     "    for I in range(len(A)):                      # I = [0, 1]\n",
     "        temp = []                                \n",
     "        for j in range(len(B[0])):               # j = [0, 1, 2, 3, 4]\n",
-    "            value = 0                            # individual value, v = 0+1,   v = 1 + 10,   v = 11 + 27=>38\n",
+    "            value = 0                            # individual value, v = 0+1,   v = 1 + 10,   v = 11 + 27=>14\n",
     "            for i in range(len(A[0])):           # i = [0, 1, 2]\n",
-    "                value += (A[I][i] * B[i][j])     # A[0][0] * B[0][0] +  A[0][1]*B[1][0] +  A[0][2]*B[2][0]  ==> 38\n",
+    "                value += (A[I][i] * B[i][j])     # A[0][0] * B[0][0] +  A[0][1]*B[1][0] +  A[0][2]*B[2][0]  ==> 14\n",
     "            temp.append(value)                   # temp.append(38)\n",
     "        result.append(temp)\n",
     "    \n",
@@ -83,14 +62,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = mm(A, B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "[[14, 17, 20, 23, 26], [35, 44, 53, 62, 71], [56, 71, 86, 101, 116]]\n"
      ]
     }
    ],
@@ -100,23 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -162,35 +136,70 @@
       "i = 0\n",
       "i = 1\n",
       "i = 2\n",
-      "v =  28\n",
-      "temp = [28]\n",
+      "v =  35\n",
+      "temp = [35]\n",
       "j = 1  and v = 0\n",
       "i = 0\n",
       "i = 1\n",
       "i = 2\n",
-      "v =  35\n",
-      "temp = [28, 35]\n",
+      "v =  44\n",
+      "temp = [35, 44]\n",
       "j = 2  and v = 0\n",
       "i = 0\n",
       "i = 1\n",
       "i = 2\n",
-      "v =  42\n",
-      "temp = [28, 35, 42]\n",
+      "v =  53\n",
+      "temp = [35, 44, 53]\n",
       "j = 3  and v = 0\n",
       "i = 0\n",
       "i = 1\n",
       "i = 2\n",
-      "v =  49\n",
-      "temp = [28, 35, 42, 49]\n",
+      "v =  62\n",
+      "temp = [35, 44, 53, 62]\n",
       "j = 4  and v = 0\n",
       "i = 0\n",
       "i = 1\n",
       "i = 2\n",
-      "v =  56\n",
-      "temp = [28, 35, 42, 49, 56]\n",
-      "lst = [[14, 17, 20, 23, 26], [28, 35, 42, 49, 56]]\n",
+      "v =  71\n",
+      "temp = [35, 44, 53, 62, 71]\n",
+      "lst = [[14, 17, 20, 23, 26], [35, 44, 53, 62, 71]]\n",
       "[14, 17, 20, 23, 26]\n",
-      "[28, 35, 42, 49, 56]\n"
+      "[35, 44, 53, 62, 71]\n",
+      "I =  2\n",
+      "j = 0  and v = 0\n",
+      "i = 0\n",
+      "i = 1\n",
+      "i = 2\n",
+      "v =  56\n",
+      "temp = [56]\n",
+      "j = 1  and v = 0\n",
+      "i = 0\n",
+      "i = 1\n",
+      "i = 2\n",
+      "v =  71\n",
+      "temp = [56, 71]\n",
+      "j = 2  and v = 0\n",
+      "i = 0\n",
+      "i = 1\n",
+      "i = 2\n",
+      "v =  86\n",
+      "temp = [56, 71, 86]\n",
+      "j = 3  and v = 0\n",
+      "i = 0\n",
+      "i = 1\n",
+      "i = 2\n",
+      "v =  101\n",
+      "temp = [56, 71, 86, 101]\n",
+      "j = 4  and v = 0\n",
+      "i = 0\n",
+      "i = 1\n",
+      "i = 2\n",
+      "v =  116\n",
+      "temp = [56, 71, 86, 101, 116]\n",
+      "lst = [[14, 17, 20, 23, 26], [35, 44, 53, 62, 71], [56, 71, 86, 101, 116]]\n",
+      "[14, 17, 20, 23, 26]\n",
+      "[35, 44, 53, 62, 71]\n",
+      "[56, 71, 86, 101, 116]\n"
      ]
     }
    ],
@@ -217,39 +226,6 @@
     "    print('lst =',lst)\n",
     "    for x in lst:print(x)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[204, 160, 136], [224, 229, 168]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(lst)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[204, 160, 136]\n",
-      "[224, 229, 168]\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
