Assignment 1 upto 8th question

--- a/00 Assignments/1st Assignment/1.Python Assignment.ipynb
+++ b/00 Assignments/1st Assignment/1.Python Assignment.ipynb
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -418,8 +418,7 @@
     "    return #list of values\n",
     "\n",
     "S=  \"_,_,30,_,_,_,50,_,_\"\n",
-    "smoothed_values= curve_smoothing(S)\n",
-    "print(# print above values)"
+    "smoothed_values= curve_smoothing(S)"
    ]
   },
   {
@@ -459,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -477,6 +476,7 @@
     "def compute_conditional_probabilites(A):\n",
     "    # your code\n",
     "    # print the output as per the instructions\n",
+    "    return\n",
     "\n",
     "A = [['F1','S1'],['F2','S2'],['F3','S3'],['F1','S2'],['F2','S3'],['F3','S2'],['F2','S1'],['F4','S1'],['F4','S3'],['F5','S1']]\n",
     "\n",
