4th March naive byes is ended, 34.5 percent is done

--- a/Module 2 - EDA and Data Visualization/04 - Dimensionality Reduction/15.7 Data Preprocessing - Column Standardization.ipynb
+++ b/Module 2 - EDA and Data Visualization/04 - Dimensionality Reduction/15.7 Data Preprocessing - Column Standardization.ipynb
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        " 1.524341490745176]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        "18  1.524341  0.819078  1.798259  0.723339  setosa"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,16 +644,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x27f2843c908>"
+       "<matplotlib.legend.Legend at 0x20b51add988>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -681,16 +681,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x27f28563688>"
+       "<matplotlib.legend.Legend at 0x20b51bc5148>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -714,6 +714,82 @@
     "sns.distplot( standard_matrix[\"pl_dash\"] , label=\"pl_dash\")\n",
     "sns.distplot( standard_matrix[\"pw_dash\"] , label=\"pw_dash\")\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.531187452382782e-16\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(standard_matrix[\"sl_dash\"].mean())\n",
+    "print(standard_matrix[\"sl_dash\"].std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.414321870843291e-16\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(standard_matrix[\"sw_dash\"].mean())\n",
+    "print(standard_matrix[\"sw_dash\"].std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.8698493046318425e-16\n",
+      "1.0000000000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(standard_matrix[\"pw_dash\"].mean())\n",
+    "print(standard_matrix[\"pw_dash\"].std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2.5710427938687837e-16\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(standard_matrix[\"pl_dash\"].mean())\n",
+    "print(standard_matrix[\"pl_dash\"].std())"
    ]
   },
   {
