--- a/00 Assignments/1st Assignment/Q6 - Find Which line separates oranges and apples.ipynb
+++ b/00 Assignments/1st Assignment/Q6 - Find Which line separates oranges and apples.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -155,45 +155,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a = 1.0 b = 1.0 c = 0.0\n",
-      "line = 1x+1y+0\n",
-      "[0, 0, 0, 0, 0]\n",
-      "[1, 1, 1, 1, 1]\n",
-      "Red 0\n",
-      "Blue 1\n",
-      "YES\n",
-      "---------------------------------------------\n",
-      "a = 1.0 b = -1.0 c = 0.0\n",
-      "line = 1x-1y+0\n",
-      "[1, 1, 0, 0]\n",
-      "[0, 1, 0, 0, 1]\n",
-      "Red 2\n",
-      "Blue 0\n",
-      "NO\n",
-      "---------------------------------------------\n",
-      "a = 1.0 b = 0.0 c = -3.0\n",
-      "line = 1x+0y-3\n",
-      "[1, 1, 0, 1, 1]\n",
+      "a = 3.0 b = -6.0 c = 12.0\n",
+      "line = 3x-6y+12\n",
+      "[1, 1, 1, 0, 0, 1]\n",
       "[1, 1, 1, 1, 1]\n",
       "Red 4\n",
       "Blue 1\n",
       "NO\n",
       "---------------------------------------------\n",
-      "a = 0.0 b = 1.0 c = -0.5\n",
-      "line = 0x+1y-0.5\n",
-      "[0, 0, 0, 0, 0]\n",
+      "a = 4.0 b = 5.0 c = 7.0\n",
+      "line = 4x+5y+7\n",
+      "[0, 0, 0, 0, 0, 1]\n",
       "[1, 1, 1, 1, 1]\n",
+      "Red 1\n",
+      "Blue 1\n",
+      "NO\n",
+      "---------------------------------------------\n",
+      "a = 3.0 b = 6.0 c = 12.0\n",
+      "line = 3x+6y+12\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[1, 1, 1, 1]\n",
       "Red 0\n",
       "Blue 1\n",
       "YES\n",
+      "---------------------------------------------\n",
+      "a = 0.0 b = 1.0 c = -0.5\n",
+      "line = 0x+1y-0.5\n",
+      "[0, 0, 0, 0, 0, 1]\n",
+      "[1, 1, 1, 1, 1]\n",
+      "Red 1\n",
+      "Blue 1\n",
+      "NO\n",
       "---------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "Red= [(1,1),(2,1),(4,2),(2,4), (-1,4)]\n",
+    "Red= [(1,1),(2,1),(4,2),(2,4), (-1,4), (-1,-1)]\n",
     "Blue= [(-2,-1),(-1,-2),(-3,-2),(-3,-1),(1,-3)]\n",
-    "Lines=[\"1x+1y+0\",\"1x-1y+0\",\"1x+0y-3\",\"0x+1y-0.5\"]\n",
+    "Lines=[\"3x-6y+12\",\"4x+5y+7\",\"3x+6y+12\",\"0x+1y-0.5\"]\n",
     "\n",
     "\n",
     "for i in Lines:\n",
@@ -204,16 +204,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a = 1.0 b = 1.0 c = 0.0\n",
+      "a = 3.0 b = -6.0 c = 12.0\n",
       "\n",
-      "a = -1.0 b = -1.0 c = 0.0\n",
+      "a = 1.0 b = -1.0 c = 0.0\n",
       "\n",
       "a = 1.0 b = 0.0 c = -3.0\n",
       "\n",
